# local-features

./: Cargo.toml  README.md  flake.nix
examples/match_images/: Cargo.toml
examples/match_images/src/: main.rs
examples/webcam/: Cargo.toml
examples/webcam/src/: camera.rs  main.rs
local_features/: Cargo.toml
local_features/benches/: bench.rs
local_features/models/mkd/: concat-pca-liberty.safetensors  concat-pca-notredame.safetensors  concat-pca-yosemite.safetensors
local_features/src/: lib.rs  mkd_ref.rs
local_features/src/vulkan/: make_a_vulkan.rs  mod.rs  patch_pyramid.rs  shaders.rs  tasks_common.rs  tasks_detect.rs  tasks_extract.rs
local_features/src/vulkan/shaders/: atan2.glsl  blur.glsl  blur_pyramid.glsl  common.glsl  extensions.glsl  keypoint_orientation.glsl  pixel_type.glsl  scan_extrema.glsl  swt.glsl  swt_sub.glsl
local_features/src/vulkan/shaders/mkd/: embedding.glsl  embedding_cartesian.glsl  embedding_polar.glsl  normalize.glsl  normalize_final.glsl  patch_gradients.glsl  whitening.glsl
python/: Cargo.toml
python/src/: lib.rs
sample_data/: credit.txt
