[package]
name = "local_features"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true } 
ndarray = { workspace = true } 

thiserror = "2.0.11"
safetensors = { version = "0.5.2" }
byte-slice-cast = "1.2.2"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "37c36b5af107f08a6173cce12146c54a75dd56b4" }
vulkano-taskgraph = { git = "https://github.com/vulkano-rs/vulkano", rev = "37c36b5af107f08a6173cce12146c54a75dd56b4" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "37c36b5af107f08a6173cce12146c54a75dd56b4", features = ["shaderc-debug"] }
bytemuck = { version = "1.9", features = ["nightly_float"] }
order-stat = "0.1.3"
float-ord = "0.3.2"
index_vec = "0.1.4"
fxhash = "0.2.1"
log = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
image = { workspace = true }
imageproc = { workspace = true }
nshare = { workspace = true }

[[bench]]
name = "bench"
harness = false
